<resources>
    <string name="app_name">Advanced Basic Sensors</string>
    <string name="App_Title">Advanced Basic Sensors</string>
    <string name="settings_button_text">Settings</string>
    <string name="back_button_text">Back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temperature_text">Temperature</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="distanceText">Distance</string>
</resources>