<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <RadioGroup
        android:id="@+id/temperatureRadioGroup"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/temperatureRadioNaming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/temperature_text"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/celsiusRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/celsius" />

        <RadioButton
            android:id="@+id/kelvinRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kelvin" />

        <RadioButton
            android:id="@+id/fahrenheitRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fahrenheit" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00BCD4"
        android:padding="30dp"
        android:text="@string/App_Title"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="#00BCD4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back_button_text"
            android:padding="20dp"
            android:rotation="180"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@android:drawable/ic_media_play"
            tools:ignore="ImageContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RadioGroup
        android:id="@+id/distanceRadioGroup"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperatureRadioGroup">

        <TextView
            android:id="@+id/distanceRadioNaming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/distanceText"
            android:textAlignment="center"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/metricRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/metric" />

        <RadioButton
            android:id="@+id/imperialRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/imperial" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>